Add conversion to markdown

--- a/SubtextJekyllExporter/SubtextJekyllExporter/SubtextJekyllExporter.csproj
+++ b/SubtextJekyllExporter/SubtextJekyllExporter/SubtextJekyllExporter.csproj
@@ -52,6 +52,11 @@
       <Link>select-content-for-jekyll.sql</Link>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="pandoc.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
